# ai-sec-scan

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/actions/ai-sec-scan/: action.yml
.github/workflows/: security-scan.yml
examples/: vulnerable_app.py
src/ai_sec_scan/: __init__.py  baseline.py  cache.py  cli.py  cost.py  models.py  output.py  sarif.py  scanner.py
src/ai_sec_scan/providers/: __init__.py  anthropic.py  base.py  openai.py
src/ai_sec_scan/rules/: __init__.py  default.py
tests/: conftest.py  helpers.py  test_baseline.py  test_cache.py  test_cli.py  test_collect_files_edge_cases.py  test_cost.py  test_github_annotations.py  test_models.py  test_output.py  test_render_text.py  test_rules_default.py  test_sarif.py  test_scanner.py
