[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-sec-scan"
version = "0.2.0"
description = "AI-powered security scanner for source code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "frankentini", email = "frankentini@users.noreply.github.com" },
]
keywords = ["security", "scanner", "ai", "sast", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "anthropic>=0.39",
    "openai>=1.50",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
ai-sec-scan = "ai_sec_scan.cli:main"

[project.urls]
Homepage = "https://github.com/frankentini/ai-sec-scan"
Repository = "https://github.com/frankentini/ai-sec-scan"
Issues = "https://github.com/frankentini/ai-sec-scan/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_sec_scan"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
